# SimVex-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: assistant.py
app/core/: config.py  exceptions.py
app/db/: database.py  redis.py
app/schemas/: assistant.py
app/services/: assistant.py
