[project]
name = "simvex-ai"
version = "0.1.0"
description = "AI Assistant API for 3D engineering CAD models"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "openai>=1.59.0",
]
